--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
-Flask
+Flask~=3.0.0
 Flask-JWT-Extended
 Flask-Smorest
 Flask-SQLAlchemy
-SQLAlchemy
+SQLAlchemy~=2.0.25
+passlib~=1.7.4
+marshmallow~=3.20.2
+python-dotenv~=1.0.0
+psycopg2~=2.9.9
 passlib
-marshmallow
-python-dotenv
-psycopg2
-passlib
+
+PyJWT~=2.8.0
