--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,6 +31,23 @@ jobs:
 
   test:
     runs-on: ubuntu-latest
+    services:
+      postgres:
+        image: postgres:16
+        ports:
+          - 5432:5432
+        env:
+          POSTGRES_USER: alice
+          POSTGRES_PASSWORD: bob
+          POSTGRES_DB: project_test_db
+        options: >-
+          --health-cmd="pg_isready -U alice"
+          --health-interval=10s
+          --health-timeout=5s
+          --health-retries=5
+    env:
+      TEST_DATABASE_URL: postgresql://alice:bob@localhost:5432/project_test_db
+
     needs: build-image
     steps:
       - name: Pull Docker image
