--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,6 +33,10 @@ jobs:
   test:
     runs-on: ubuntu-latest
     environment: Test
+    env:
+      TEST_DATABASE_URL: ${{ vars.TEST_DATABASE_URL }}
+      JWT_SECRET_KEY: ${{ vars.JWT_SECRET_KEY }}
+      ADMIN_USER_ID: ${{ vars.ADMIN_USER_ID }}
     services:
       postgres:
         image: postgres:16
